<?xml version="1.0" encoding="utf-8"?>

<ScrollView
xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="fill_parent" android:layout_height="fill_parent"> 

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="@drawable/bg">
		
	<TextView android:layout_width="fill_parent"
		android:padding="5px"
		android:layout_marginRight="10px"
		android:layout_marginLeft="5px"
		android:layout_height="wrap_content"
		android:text="@string/title" android:textColor="#ffffff"/>
	<EditText android:id="@+id/title" 
		android:padding="5px"
		android:layout_marginRight="10px"
		android:layout_marginLeft="10px"
	  	android:layout_width="fill_parent"
		android:layout_height="wrap_content" 
		/>
		
	<TextView android:layout_width="fill_parent"
		android:padding="5px"
		android:layout_marginRight="10px"
		android:layout_marginLeft="5px"
		android:layout_height="wrap_content"
		android:text="@string/category" android:textColor="#ffffff"/>
    <Spinner android:id="@+id/category"
		android:padding="5px"
		android:layout_marginRight="10px"
		android:layout_marginLeft="10px"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:drawSelectorOnTop="true" />
        
	<TextView android:layout_width="fill_parent"
		android:padding="5px"
		android:layout_marginRight="10px"
		android:layout_marginLeft="5px"
		android:layout_height="wrap_content"
		android:text="@string/group" android:textColor="#ffffff"/>
	<LinearLayout android:orientation="horizontal"
		android:layout_marginRight="10px"
		android:layout_marginLeft="10px"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		
	    <Spinner android:id="@+id/group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawSelectorOnTop="true" />
	    <ImageButton android:id="@+id/btn_group"
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:src="@drawable/process" />
	</LinearLayout>
	
		
	<TextView android:layout_width="fill_parent"
		android:padding="5px"
		android:layout_marginRight="10px"
		android:layout_marginLeft="5px"
		android:layout_height="wrap_content"
		android:text="@string/distance_mark" android:textColor="#ffffff"/>
    <Spinner android:id="@+id/distance_mark"
		android:padding="5px"
		android:layout_marginRight="10px"
		android:layout_marginLeft="10px"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:drawSelectorOnTop="true" />

	
	<TextView android:layout_width="wrap_content"
		android:padding="5px"
		android:layout_marginRight="10px"
		android:layout_marginLeft="5px"
		android:layout_height="wrap_content"
		android:text="@string/time_mark" android:textColor="#ffffff"/>
    <Spinner android:id="@+id/time_mark"
		android:padding="5px"
		android:layout_marginRight="10px"
		android:layout_marginLeft="10px"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:drawSelectorOnTop="true" />


	<TextView android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:padding="5px"
		android:layout_marginRight="10px"
		android:layout_marginLeft="5px"
		android:text="@string/description" android:textColor="#ffffff"/>
	<EditText android:id="@+id/description" android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_weight="1"
		android:gravity="top"
		android:padding="5px"
		android:layout_marginRight="10px"
		android:layout_marginLeft="10px"
		android:scrollbars="vertical" />
	


</LinearLayout>

</ScrollView>